fixed nav bar wrap, finished list and list item

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -111,7 +111,7 @@
 }
 .navlink {
   display: flex;
-  flex-direction: row;
+  flex-flow: row wrap;
 
 }
 .navbar {
@@ -123,7 +123,8 @@
   flex-direction: row;
 }
 
+
 * {
-  color: #1d1d1d;
+  /* color: #1d1d1d; */
   font-family: 'Poppins';
 }
